# taskhub

./: .gitignore  README.md  feature.json  main.py  pyproject.toml  start.sh  stop.sh
taskhub_api/: api.py  models.py  registry.py  schemas.py  storage.py
taskhub_worker/: reaper.py  scheduler.py  worker.py
tasks/: comm_backtest.py  demo.py  showcase.py
tasks/scripts/: showcase_impl.py
web/: package-lock.json  package.json  vite.config.js
web/src/: App.jsx  index.css
